--- a/index.html
+++ b/index.html
@@ -3,78 +3,322 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
-    <title>Revisão CSS FLEX</title>
+    <title>Portifólio</title>
+    <link rel="stylesheet" 
+    href="assets/css/base.css">
+    <link rel="shortcut icon"
+    type="image/png"
+    href="assets/images/logo.png">
+    <link rel="stylesheet" 
+    href="assets/css/header.css">
+    <link rel="stylesheet" 
+    href="assets/css/hero.css">
+    <link rel="stylesheet"
+    href="assets/css/intro.css">
+    <link rel="stylesheet"
+    href="assets/css/skills.css">
+    <link rel="stylesheet" 
+    href="assets/css/recent-work.css">
+    <link rel="stylesheet" href="./assets/css/worked-with.css">
+    <link rel="stylesheet" href="./assets/css/collab.css">
+    <link rel="stylesheet" href="./assets/css/testimonials.css">
+    <link rel="stylesheet" href="./assets/css/cta.css"> 
+    <link rel="stylesheet" href="./assets/css/footer.css"> 
+
+
 </head>
 <body>
-    <div class="todos">
-        <div class="linha1">
-    <div class="card">
-        <img src="./ro.jpeg"  width="180" alt="">
-    <div>
-
-            <h1> Títulos</h1>
-            <h2>Descrição</h2>
-            <span>R$ 5, 50</span>
-            <button>Clique aqui</button>
+    <header class="container">
+        <div class="navbar">
+            <div class="logo">
+             <a href="">
+              <img src="assets/images/logo.png" alt="">
+             </a>
+            </div>
+            <div class="menu-opener">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
         </div>
-    </div>
-    <div class="card">
-        <img src="./ro.jpeg"  width="180" alt="">
-    <div>
+        <nav>
+            <a href="">Blog</a>
+            <a href="" 
+            class="button">Contato</a>
+        </nav>
+    </header>
+    <section class="hero container">
+        <h1>Designer, Frontend
+            Developer & Vídeo Maker
+        </h1>
+        <h2>Eu desenho e codifico projetos
+            bonitos e amo o que faço.
+        </h2>
+        <img class="hero-avatar" 
+        src="./assets/images/avatar.svg" 
+        alt="">
+        <img class="hero-device"
+        src="./assets/images/hero-devices.svg"
+        alt="">
 
-            <h1> Títulos</h1>
-            <h2>Descrição</h2>
-            <span>R$ 5, 50</span>
-            <button>Clique aqui</button>
+    </section>
+    <section class="intro">
+        <div class="container">
+            <div class="box">
+                <p class="title">Oi, eu sou Bruno da Silva, tudo bem?
+                </p>
+                <p class="subtitle">Desde que comecei minha jornada como designer freelancer, há 12 anos, fiz trabalhos remotos para agências, ajudei startups e colaborei com pessoas talentosas para criar produtos digitais para ambos uso empresarial e do consumidor. Sou bastante confiante, naturalmente curioso e trabalho para melhorar minhas habilidades constantemente.
+                </p>
+            </div>
         </div>
-    </div>
-    <div class="card">
-        <img src="./ro.jpeg"  width="180" alt="">
-    <div>
-
-            <h1> Títulos</h1>
-            <h2>Descrição</h2>
-            <span>R$ 5, 50</span>
-            <button>Clique aqui</button>
+    </section>
+    <section class="skills">
+        <div class="skills-overlay"></div>
+        <div class="container">
+            <div class="grid">
+                <div class="skill">
+                    <div class="skill-icon">
+                        <img src="assets/images/design.svg"
+                        alt=""/>
+                    </div>
+                    <p class="skill-title">Designer</p>
+                    <p class="skill-desc">Eu valorizo
+                        estruturas simples, design clean e
+                        interações customizadas.</p>
+                    <p class="skill-sub">Coisas que gosto de
+                        desenhar</p>
+                    <p class="skill-txt">UX, UI, Web, 
+                        Apps, Logos</p>
+                    <p class="skill-sub">Ferramentas que
+                        uso</p>
+                    <div class="skill-txt">
+                        <ul>
+                            <li>Affinity Designer</li>
+                            <li>Figma</li>
+                            <li>Papel & Caneta</li>
+                            <li>Sketch</li>
+                            <li>WebFlow</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="skill">
+                    <div class="skill-icon">
+                        <img src="assets/images/design.svg"
+                        alt=""/>
+                    </div>
+                    <p class="skill-title">Designer</p>
+                    <p class="skill-desc">Eu valorizo
+                        estruturas simples, design clean e
+                        interações customizadas.</p>
+                    <p class="skill-sub">Coisas que gosto de
+                        desenhar</p>
+                    <p class="skill-txt">UX, UI, Web, 
+                        Apps, Logos</p>
+                    <p class="skill-sub">Ferramentas que
+                        uso</p>
+                    <div class="skill-txt">
+                        <ul>
+                            <li>Affinity Designer</li>
+                            <li>Figma</li>
+                            <li>Papel & Caneta</li>
+                            <li>Sketch</li>
+                            <li>WebFlow</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="skill">
+                    <div class="skill-icon">
+                        <img src="assets/images/design.svg"
+                        alt=""/>
+                    </div>
+                    <p class="skill-title">Designer</p>
+                    <p class="skill-desc">Eu valorizo
+                        estruturas simples, design clean e
+                        interações customizadas.</p>
+                    <p class="skill-sub">Coisas que gosto de
+                        desenhar</p>
+                    <p class="skill-txt">UX, UI, Web, 
+                        Apps, Logos</p>
+                    <p class="skill-sub">Ferramentas que
+                        uso</p>
+                    <div class="skill-txt">
+                        <ul>
+                            <li>Affinity Designer</li>
+                            <li>Figma</li>
+                            <li>Papel & Caneta</li>
+                            <li>Sketch</li>
+                            <li>WebFlow</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </div>
-    
+    </section>
+    <section class="recent-work container">
+        <p class="title">Meus trabalhos recentes</p>
+        <p class="subtitle">Aqui estão alguns dos trabalhos que ja fiz.
+            Quer ver mais? <a href="">Entra em contato</a>
+        </p>
+        <div class="grid">
+            <div class="item">
+                <img class="image" 
+                src="assets/images/works/app haruy.png" alt="">
+                <div class="overlay">
+                    <p>Haruy Sushi - cardápio com integração
+                        ao Whatsapp</p>
+                    <a href="https://cardapioharuysushy.pages.dev" 
+                    class="button" target="_blank">Visite o website</a>
+                </div>
+            </div>
+            <div class="item">
+                <img class="image" 
+                src="assets/images/works/burkettandco.png" alt="">
+                <div class="overlay">
+                    <p>Aqui vai uma descrição sobre o projeto
+                        em si ou a própria empresa</p>
+                    <a href="" class="button">Visite o website</a>
+                </div>
+            </div>
+            <div class="item">
+                <img class="image" 
+                src="assets/images/works/chronicled.png" alt="">
+                <div class="overlay">
+                    <p>Aqui vai uma descrição sobre o projeto
+                        em si ou a própria empresa</p>
+                    <a href="" class="button">Visite o website</a>
+                </div>
+            </div>
+            <div class="item">
+                <img class="image" 
+                src="assets/images/works/glcsolutions.png" alt="">
+                <div class="overlay">
+                    <p>Aqui vai uma descrição sobre o projeto
+                        em si ou a própria empresa</p>
+                    <a href="" class="button">Visite o website</a>
+                </div>
+            </div>
+            <div class="item">
+                <img class="image" 
+                src="assets/images/works/coupal.png" alt="">
+                <div class="overlay">
+                    <p>Aqui vai uma descrição sobre o projeto
+                        em si ou a própria empresa</p>
+                    <a href="" class="button">Visite o website</a>
+                </div>
+            </div>
+            <div class="item">
+                <img class="image" 
+                src="assets/images/works/wedlerengineering.png" alt="">
+                <div class="overlay">
+                    <p>Aqui vai uma descrição sobre o projeto
+                        em si ou a própria empresa</p>
+                    <a href="" class="button">Visite o website</a>
+                </div>
+            </div>
         </div>
-    </div>
-    <br>
-    <div class="linha2">
-
-    <div class="card">
-        <img src="./ro.jpeg"  width="180" alt="">
-    <div>
-
-            <h1> Títulos</h1>
-            <h2>Descrição</h2>
-            <span>R$ 5, 50</span>
-            <button>Clique aqui</button>
+        <a href="" class="button seemore">Deseja ver mais?</a>
+    </section>
+    <section class="worked-with">
+        <div class="container">
+            <p class="title">Já colaborei com diversas empresas incríveis:</p>
+            <div class="grid">
+                <img src="assets/images/clients/briteweb.svg" alt="" />
+                <img src="assets/images/clients/serpmetrics.svg" alt="" />
+                <img src="assets/images/clients/redstamp.svg" alt="" />
+                <img src="assets/images/clients/domain7.svg" alt="" />
+                <img src="assets/images/clients/designlab.png" alt="" />
+                <img src="assets/images/clients/chronicled.svg" alt="" />
+                <img src="assets/images/clients/bldrs.png" alt="" />
+                <img src="assets/images/clients/serpmetrics.svg" alt="" />
+            </div>
         </div>
-    </div>
-    <div class="card">
-        <img src="./ro.jpeg"  width="180" alt="">
-    <div>
+    </section>
+    <section class="collab">
+        <p class="title">Tem interesse em fazer algum trabalho comigo?</p>
+        <p class="subtitle">Estou sempre aberto a discutir projetos e possíveis parcerias de trabalho.</p>
+        <a href="" class="button">Começar uma conversa</a>
+    </section>
+    <section class="testimonials container">
+        <p class="title">Depoimentos</p>
+        <p class="subtitle">As pessoas com quem já trabalhei disseram coisas boas ao meu respeito...</p>
 
-            <h1> Títulos</h1>
-            <h2>Descrição</h2>
-            <span>R$ 5, 50</span>
-            <button>Clique aqui</button>
+        <div class="slider">
+            <input checked id="slider-1" name="slider" type="radio" />
+            <input id="slider-2" name="slider" type="radio" />
+            <div class="slider-area">
+                <div class="slider-item">
+                    <img src="assets/images/avatars/pascal.png" alt="" />
+                    <p class="description">“Trabalhar com Bruno foi um prazer e nós esperamos poder trabalhar juntos
+                        novamente. Ele é o tipo de designer que você pode confiar seu projeto desde o início até o fim.”
+                    </p>
+                    <p class="name">Antônio Gonçalves</p>
+                    <p class="role">Diretor Criativo, Empresa X</p>
+                </div>
+                <div class="slider-item">
+                    <img src="assets/images/avatars/alvin.png" alt="" />
+                    <p class="description">“Bruno é um excelente comunicador e possui sensibilidade e confiança para se
+                        aprofundar nos projetos e entender de fato o que deve ser feito para sair um resultado
+                        excepcional.”</p>
+                    <p class="name">Mateus Dantas</p>
+                    <p class="role">CEO, Imobiliária ABC</p>
+                </div>
+            </div>
+            <div class="slider-nav">
+                <label class="n1" for="slider-1"></label>
+                <label class="n2" for="slider-2"></label>
+            </div>
         </div>
-    </div>
-    <div class="card">
-        <img src="./ro.jpeg"  width="180" alt="">
-    <div>
-
-            <h1> Títulos</h1>
-            <h2>Descrição</h2>
-            <span>R$ 5, 50</span>
-            <button>Clique aqui</button>
+    </section>
+    <section class="cta">
+    <div class="overlay"></div>
+    <div class="container">
+        <div class="area">
+            <div class="area-side">
+                <p class="title">Comece um projeto</p>
+            </div>
+            <div class="area-side">
+                <p class="subtitle">Tem interesse em Trabalhar junto? Vamos agendar uma reunião rápida.
+                    Eu pago o  café.</p>
+                </div>
+                <div class="area-side">
+                    <a href="" class="button">Agendar reunião</a>
+            
+                </div>
+            </div>
         </div>
-    </div>
-</div>
+    </section>
+    <footer>
+        <a href="">
+            <img class="logo" src="assets/images/logo_white.png">
+        </a>
+        <p class="title">Vivendo, aprendendo e melhorando uum dia de cada vez.</p>
+        <div class="social">
+            <a href="">
+                <img class="logo" src="assets/images/social_ig.svg" alt="Instagram"/>
+            </a>
+             <a href=""></a>
+             <img class="logo" src="assets/images/social_x.svg" alt="X"/>
+            </a>
+            <a href=""></a>
+            <img class="logo" src="assets/images/social_linkedin.svg" alt="Linkedin"/>
+        </a>
+        <a href=""></a>
+        <img class="logo" src="assets/images/social_email.svg" alt="Email"/>
+    </a>
+    <a href=""></a>
+    <img class="logo" src="assets/images/social_zap.svg" alt="Whatsapp"/>
+</a>   
+ </div>
+        <p class="copyright">Criado por mim mesmo.</p>
+        <p class="legal">CNPJ: 000-000-0000/00</p>
 
-</body>
+
+
+    </footer>
+    </body>
+    <script type="text/javascript" src="assets/js/script.js">
+
+
+    </script>
+
 </html>
